+ DoctorServiceTest.java + PatientServiceTest.java + InstitutionServiceTest.java + VisitServiceTest.java